--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "9.3.0"
+  },
   "author": "Alessandro Pepe",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^4.0.0",
+    "node": "^9.3.0"
+  }
 }
